[package]
name = "day-08"
version = "0.1.0"
edition = "2021"
description = "Advent of Code 2023 - Day 8"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
nom = { workspace = true }
rstest = { workspace = true }
